# caskade

./: .codecov.yml  .gitignore  .readthedocs.yml  LICENSE  README.md  paper.bib  paper.md  pyproject.toml  readthedocs.yml  requirements.txt  test_graph
.github/: CONTRIBUTING.md
.github/workflows/: cd.yml  ci.yml
docs/: _config.yml  _toc.yml  install.md  intro.md  modules.rst  requirements.txt
docs/notebooks/: BeginnersGuide.ipynb
docs/source/: Module.md  Node.md  Param.md  Param.rst  _config.yml  _toc.yml  contributing.md  install.md  intro.md  license.md  modules.rst
docs/source/api/: backend.rst  collections.rst  context.rst  decorators.rst  exceptions.rst  memo.rst  module.rst  node.rst  param.rst  utilities.rst  warnings.rst
docs/source/notebooks/: AdvancedGuide.ipynb  BeginnersGuide.ipynb  HierarchicalModels.ipynb  WorkedExample.ipynb
src/cascade/: base.py  context.py  decorators.py  module.py  param.py
src/caskade/: __init__.py  _version.py  backend.py  base.py  collection.py  context.py  decorators.py  errors.py  mixins.py  module.py  param.py  tests.py  utils.py  warnings.py
tests/: conftest.py  test_active_cache.py  test_backend.py  test_base.py  test_collection.py  test_context.py  test_forward.py  test_integration.py  test_module.py  test_notebooks.py  test_param.py  test_param_groups.py  test_save.py  test_save_append.h5  test_save_notappend.h5  test_utils.py
